Transition to java 11